Fix alignment when range controls are wrapped

--- a/style.css
+++ b/style.css
@@ -78,6 +78,9 @@ input:invalid {
 /* DATE CONTROLS */
 
 #range-controls {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
     padding: 0.5em;
 }
 
